# adfusionR-D

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup_runpod.sh
adfusion/: __init__.py
adfusion/config/: config.yaml
adfusion/pipeline/: __init__.py  base.py  detect_objects.py  estimate_depth.py  export_video.py  extract_frames.py  harmonize.py  qa.py  reconstruct_object.py  remove_object.py  render_brand.py  track_objects.py
adfusion/utils/: logging.py  metrics.py
docs/: runpod_validation.md  verification_report_template.md
research/: sam3_integration.md  sam3_repository_audit.md  sam3_windows_discrepancy.md
scripts/: run_validation.sh
utils/: download_models.py  verify_env.py
