[project]
name = "adfusion"
version = "0.1.0"
description = "A modular research framework for AI-powered Virtual Product Placement (VPP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0.0",
    "pyyaml>=6.0.1",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
